<package>
	<name>usarsim_inf</name>
	<version>1.0.0</version>
	<description>
		USARSimRos is designed to provide a seamless interface between the USARSim framework (www.sourceforge.net/projects/usarsim) and ROS (www.ros.org).

		USARSim provides embodyment (sensors and platforms) and environments for a physics-based robotic simulation while ROS provides leading edge control algorithms.

		USARSimROS provides for auto-discovery of the simulated robots and sensors and connects these robots to the appropriate ROS control topics. Through the use of auto-discovery, robotic platforms and sensors may be easily changed and connect to the ROS control stack. Repeatable experiments are possible in a variety of environments and will hopefully lead to more robust and capable algorithms.
	</description>
	<author>Stephen Balakirsky</author>
	<maintainer email="laeqten@gmail.com">Jiri Horner</maintainer>
	<license>BSD</license>
	<url>https://github.com/hrnr/ros-usarsim</url>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>control_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>control_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

</package>


